# Compiler308

./: README.md
FlexBison/: Makefile  a.out  lex.yy.c  makefile  test2.l  test2.y  y.tab.c  y.tab.h
Lab1/: a_notes_before_cheking_this_folder.txt  check_comment  check_comment.cpp  check_keywords.cpp  check_vowel.cpp  comment_tests.txt  lab1.sh  preprocessed.txt
Lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  a_notes_before_cheking_this_folder.txt  check_identifier.cpp  cmake_install.cmake  keywords.txt  q2_tokenize.cpp  q3_file_details.cpp  q3_tokenizer_test.txt  test.cpp  tests.cpp
Lab3/: README.md
Lab3/CommentCounter/: comment_counter.l  comments.txt  dump.c  lex.yy.c  makefile  q2.out
Lab3/WordCounter/: dump.c  lex.yy.c  q2.out  wordcntr.l  words.txt
Lab4/: README.md
Lab4/q1_replacer/: Sem6.code-workspace  comments.txt  lex.yy.c  rep.out  replacer.l  run.sh  shifted.txt
Lab4/q2_printscan/: comments.txt  dump.c  lex.yy.c  printscan.l  ps.out  run.sh
Lab4/q3_counter/: cntr.l  cntr.out  comments.txt  dump.c  lex.yy.c  run.sh
Lab5_12Mar/Arithmetic/: Makefile  a.out  arith.y  y.tab.c
Lab5_12Mar/Pattern/: Makefile  pat.l  pat.y
Lab5_12Mar/q1Pattern/: a.out  lex.yy.c  pat.l  pat.y  y.tab.c  y.tab.h
Lab5_12Mar/q2Arithmetic/: Makefile  a.out  arith.l  arith.y  lex.yy.c  y.tab.c
Lab6/q1Arithmetic/: arith.l  arith.y  lex.yy.c  y.tab.c
Lab6/q2ClosedParenthesis/: Makefile  a.out  comment_preprocessor  comment_preprocessor.cpp  lex.yy.c  q1input.c  (+5 more)
Lab7/: README.md
Lab8/: README.md
TestFlexBison/: ignore.txt  lex.yy.c  test.l  test.y  y.tab.c
(+59 files in other folders)
